注释测试内容

--- a/src/common/templates/productInfo.html
+++ b/src/common/templates/productInfo.html
@@ -30,7 +30,7 @@
                 <img class="img" src="{{productInfo.baseData.picUrl}}" />
             </div>
 
-            <div class="videogular-container">
+            <!-- <div class="videogular-container">
                 <videogular vg-theme="productInfo.config.theme.url">
                     <vg-media vg-src="productInfo.config.sources"
                               vg-tracks="productInfo.config.tracks">
@@ -48,7 +48,7 @@
 
                     <vg-overlay-play class="overlay-play"></vg-overlay-play>
                 </videogular>
-            </div>
+            </div> -->
 
             <!-- 商品基本信息 -->
             <div class="product-info light-bg">
