--- a/src/common/templates/productInfo.html
+++ b/src/common/templates/productInfo.html
@@ -8,7 +8,9 @@
                 </button>
             </span>
         </div>
-        <div class="title title-center header-item logo-title"></div>
+        <div class="title title-center header-item">
+            课程介绍
+        </div>
     </ion-header-bar>
 
     <ion-content class="stable-bg" delegate-handle="productInfoScroll">
