修改商城搜索页input框样式问题

--- a/src/common/resources/sass/pages/_mallIndex.scss
+++ b/src/common/resources/sass/pages/_mallIndex.scss
@@ -69,6 +69,7 @@
         padding: 10px 10px 10px 30px;
         width: 100%;
         height: 40px;
+        line-height: 18px;
         font-size: 14px;
         color: $text-color-secondary;
         background-color: $light;
