--- a/src/common/resources/sass/pages/_downloadVideoList.scss
+++ b/src/common/resources/sass/pages/_downloadVideoList.scss
@@ -7,13 +7,11 @@
     }
 
     .video-list {
+        padding-left: 12px;
         background-color: #fff;
     }
 
     .video-item {
-        padding: 12px 12px 12px 0;
-        margin-left: 12px;
-        @extend %font-size-big;
         background: superfine-border-bottom($line-color);
 
         &:last-child {
@@ -22,8 +20,16 @@
     }
 
     .item-checkout {
-        padding-right: 0;
-        margin-right: 15px;
+        display: flex;
+        width: auto;
+        height: auto;
+        padding: 8px 12px 8px 0;
+        margin: 0;
+
+        input {
+            padding: 0;
+            margin: 0 10px 0 5px;
+        }
     }
 
     .video-play {
@@ -33,12 +39,8 @@
 
     .video-text {
         line-height: 1.5em;
-        max-height: 3em;
+        height: 1.5em;
         margin: 0;
-
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
 
         overflow: hidden;
         text-overflow: ellipsis;
