修改课程介绍页面title

--- a/src/common/templates/productInfo.html
+++ b/src/common/templates/productInfo.html
@@ -1,4 +1,4 @@
-<ion-view class="product-info-view" title="详情页" cm-hide-tabs="true">
+<ion-view class="product-info-view" title="课程介绍" cm-hide-tabs="true">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
         <div class="buttons buttons-left">
