视频播放－可横屏

--- a/src/common/resources/sass/_audio.scss
+++ b/src/common/resources/sass/_audio.scss
@@ -15,9 +15,12 @@
         border-radius: 50%;
 
         .icon {
-            margin-left: 3px;
             color: $light;
-            font-size: 20px;
+            font-size: 22px;
+        }
+
+        .ion-ios-play {
+            margin-left: 2px;
         }
     }
 
