--- a/src/common/templates/courseVideo.html
+++ b/src/common/templates/courseVideo.html
@@ -17,8 +17,8 @@
 
         <div ng-if="video.finishLoading">
             <!-- 视频播放 -->
-            <div class="video-container" id="video-container" 
-                cm-video="video.activeVideoItem.videoUrl">
+            <div class="video-container" cm-video="video.activeVideoItem.videoUrl">
+                <video id="video" ishivideo="true" isrotate="true"></video>
             </div>
 
             <!-- tab -->
