微信登录绑定手机号

--- a/src/common/resources/sass/_form.scss
+++ b/src/common/resources/sass/_form.scss
@@ -44,6 +44,10 @@
             padding: 8px 5px;
             font-size: 14px;
         }
+
+        input[disabled] {
+            background-color: #fff;
+        }
     }
 
     .form-forget-pwd {
