--- a/src/common/templates/userAccountSetting.html
+++ b/src/common/templates/userAccountSetting.html
@@ -28,13 +28,14 @@
                         ng-model="setting.nickName">
                 </div>
             </div>
+            <!--
             <div class="setting-row row" ng-if="setting.isthird">
                 <span class="col col-adaptive col-center setting-txt">手机号</span>
                 <div class="col">
                     <input type="text" class="setting-input" placeholder="请输入需要绑定的手机号，绑定送10个积分" 
                         ng-model="setting.mobile">
                 </div>
-            </div>
+            </div> -->
             <p class="setting-text">简介</p>
             <textarea class="setting-info" placeholder="请输入简介" 
                 ng-model="setting.personInfo" rows="8"></textarea>
