--- a/src/common/templates/user.html
+++ b/src/common/templates/user.html
@@ -127,6 +127,18 @@
                 </div>
             </li>
 
+            <li class="user-item row" ng-click="user.goWechatBindMobile()"
+                ng-if="user.thirdPartylogin">
+                <i class="iconfont icon-setting icon-left col col-adaptive"></i>
+                <div class="col">
+                    <div class="item-row row">
+                        <span class="item-text col">绑定手机号</span>
+                        <span class="item-tip col col-adaptive">{{user.wechatBindPhone}}</span>
+                        <i class="iconfont icon-rightarrow col col-adaptive"></i>
+                    </div>
+                </div>
+            </li>
+
         </ul>
 
         <ul class="user-list light-bg">
