--- a/src/common/templates/wechatBindMobile.html
+++ b/src/common/templates/wechatBindMobile.html
@@ -1,4 +1,4 @@
-<ion-view class="form-view light-bg" title="修改密码" cm-hide-tabs="true">
+<ion-view class="form-view light-bg" title="绑定手机号" cm-hide-tabs="true">
 
     <ion-header-bar class="bar-primary">
         <div class="buttons buttons-left">
@@ -8,33 +8,33 @@
                 </button>
             </span>
         </div>
-        <h1 class="title">修改密码</h1>
+        <h1 class="title">绑定手机号</h1>
     </ion-header-bar>
 
     <ion-content>
 
-        <form name="form" ng-submit="modifyPwd.submit()" novalidate>
+        <form name="form" ng-submit="wechatBindMobile.submit()" novalidate>
             <div class="form-content mtx">
                 <div class="form-content-row row">
                     <div class="col row-input col-center">
-                        <input type="password" placeholder="请输入旧密码"
-                            name="originalPassword" ng-model="modifyPwd.originalPassword"
+                        <input type="text" placeholder="请输入需要绑定的手机号"
+                            name="mobile" ng-model="wechatBindMobile.mobile"
+                            ng-minlength="11" ng-maxlength="11" 
+                            required />
+                    </div>
+                </div>
+                <div class="form-content-row row">
+                    <div class="col row-input col-center">
+                        <input type="password" placeholder="请输入6-8位字符密码"
+                            name="password" ng-model="wechatBindMobile.password"
                             ng-minlength="6" ng-maxlength="8" 
                             required />
                     </div>
                 </div>
                 <div class="form-content-row row">
                     <div class="col row-input col-center">
-                        <input type="password" placeholder="请输入6-8位字符新密码"
-                            name="newPassword" ng-model="modifyPwd.newPassword"
-                            ng-minlength="6" ng-maxlength="8" 
-                            required />
-                    </div>
-                </div>
-                <div class="form-content-row row">
-                    <div class="col row-input col-center">
-                        <input type="password" placeholder="请再次输入6-8位字符新密码"
-                            name="newRePassword" ng-model="modifyPwd.newRePassword"
+                        <input type="password" placeholder="请再次输入6-8位字符密码"
+                            name="rePassword" ng-model="wechatBindMobile.rePassword"
                             ng-minlength="6" ng-maxlength="8" 
                             required />
                     </div>
@@ -42,25 +42,25 @@
                 <div class="form-content-row row">
                     <div class="col row-input col-center">
                         <input type="text" placeholder="请输入验证码"
-                           name="smsVerifyCode" ng-model="modifyPwd.smsVerifyCode"
+                           name="smsVerifyCode" ng-model="wechatBindMobile.smsVerifyCode"
                            ng-minlength="6" maxlength="6" 
                            required />
                     </div>
                     <div class="col col-adaptive form-code">
                         <button type="button" class="button button-clear"
-                            ng-disabled="modifyPwd.timeDown != undefined || form.loginName.$invalid"
-                            ng-click="modifyPwd.sendSMSVerifyCode()">
-                            {{modifyPwd.sendVerifyCodeText}}
-                            <b class="time-down" ng-if="modifyPwd.timeDown != undefined">
-                                ({{modifyPwd.timeDown}})
+                            ng-disabled="wechatBindMobile.timeDown != undefined || form.loginName.$invalid"
+                            ng-click="wechatBindMobile.sendSMSVerifyCode()">
+                            {{wechatBindMobile.sendVerifyCodeText}}
+                            <b class="time-down" ng-if="wechatBindMobile.timeDown != undefined">
+                                ({{wechatBindMobile.timeDown}})
                             </b>
                         </button>
                     </div>
                 </div>
                 <div class="form-btn">
                     <button type="button" class="button button-block button-primary"
-                        ng-click="modifyPwd.submit()"
-                        ng-disabled="form.$invalid">提交修改</button>
+                        ng-click="wechatBindMobile.submit()"
+                        ng-disabled="form.$invalid">提交</button>
                 </div>
             </div> 
         </form>
