结算无收货地址时，获取结算信息

--- a/src/common/resources/sass/pages/_userAccountSetting.scss
+++ b/src/common/resources/sass/pages/_userAccountSetting.scss
@@ -11,6 +11,10 @@
         }
     }
 
+    .account-setting-panel {
+        height: auto !important;
+    }
+
     .setting-row {
         padding: 8px 0 8px 10px;
         margin: 0;
