--- a/src/common/templates/userAccountSetting.html
+++ b/src/common/templates/userAccountSetting.html
@@ -18,7 +18,7 @@
         </div>
     </ion-header-bar>
 
-    <ion-content>
+    <ion-content class="account-setting-panel">
 
         <form name="form" ng-submit="setting.submit()" novalidate>
             <div class="setting-row row">
