--- a/src/common/resources/sass/pages/_consigneeAdd.scss
+++ b/src/common/resources/sass/pages/_consigneeAdd.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
 .consignee-add-panel {
+    height: auto !important;
     
     .consignee-row {
         padding: 10px 12px 10px 0;
