视频播放切换bug

--- a/src/common/templates/courseVideo.html
+++ b/src/common/templates/courseVideo.html
@@ -17,9 +17,7 @@
 
         <div ng-if="video.finishLoading">
             <!-- 视频播放 -->
-            <div class="video-container" cm-video="video.activeVideoItem.videoUrl">
-                <video id="video" ishivideo="true" isrotate="true"></video>
-            </div>
+            <div class="video-container" cm-video="video.activeVideoItem.videoUrl"></div>
 
             <!-- tab -->
             <ul class="tab-info-list">
