--- a/src/common/templates/freeInfo.html
+++ b/src/common/templates/freeInfo.html
@@ -32,9 +32,7 @@
             </div> -->
 
             <!-- 视频 -->
-            <div class="video-container mb" cm-video="freeInfo.videoUrl" ng-if="freeInfo.genreName == 'video'">
-                <video id="video" ishivideo="true" isrotate="true"></video>
-            </div>
+            <div class="video-container mb" cm-video="freeInfo.videoUrl" ng-if="freeInfo.genreName == 'video'"></div>
 
             <!-- 音频 -->
             <div ng-if="freeInfo.genreName == 'radio'">
