--- a/src/common/templates/videoInfo.html
+++ b/src/common/templates/videoInfo.html
@@ -29,9 +29,7 @@
             </div> -->
 
             <!-- 视频 -->
-            <div class="video-container" cm-video="videoInfo.videoUrl" ng-if="videoInfo.genreName == 'video'">
-                <video id="video" ishivideo="true" isrotate="true"></video>
-            </div>
+            <div class="video-container" cm-video="videoInfo.videoUrl" ng-if="videoInfo.genreName == 'video'"></div>
 
             <!-- 音频 -->
             <div ng-if="videoInfo.genreName == 'radio'">
