首页：修改文本／修改分类顺序

--- a/src/common/templates/courseVideo.html
+++ b/src/common/templates/courseVideo.html
@@ -42,7 +42,7 @@
 
                     <!-- 老师介绍 -->
                     <div class="detail-box">
-                        <div class="detail-title">老师介绍</div>
+                        <!-- <div class="detail-title">老师介绍</div> -->
                         <div class="author-info">
                             <div class="author-box">
                                 <div class="author clearfix">
